--- a/english.html
+++ b/english.html
@@ -9121,7 +9121,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200522143855609" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200522151533354" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200531081401430" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9130,7 +9130,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Iry claims]] [[David Bowie]] [[Hunky Dory]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[David Chase]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9150,7 +9150,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200522152414894" title="$:/temp/search">
+<div created="20161023184814872" modified="20200531081349842" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9403,18 +9403,18 @@ As for this moment, we would say that a politician is:
 
 </pre>
 </div>
-<div created="20200215160607509" modified="20200215161321529" tags="[[True stories]] [[Monkeys with car keys]]" title="A Privileged Man">
+<div created="20200215160607509" modified="20200527111337125" tags="[[True stories]] [[Monkeys with car keys]]" title="A Privileged Man">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[Yoyo]]:
 
-That's right, I am a privileged man, and it's not easy for me to call myself a man, I would much prefer dude, but very soon I'll be 40. I'm not greedy. I don’t look at what others have.
+That's right, I am a privileged man, and it's not easy for me to call myself a man, I would much prefer a dude, but very soon I'll turn 40. I'm not greedy. I don’t look at what others have.
 
-Maybe just privileged people can afford not looking at what others have, but everybody can see their comparative advantages.
+Maybe just privileged people manage not to look at what others have, but everybody can see their comparative advantages.
 
-[[I'm a man with many problems|They make peace]], and I have a rough self-esteem issue.
+[[I'm a man with many problems|They make peace]], and I have a severe self-esteem issue.
 
-I was born with one leg shorter than the other one up to a slight limp, and I've suffered from pains in my pelvis. In my childhood I went through surgeries. I was and I'm still- short. I constantly try to please, and it's peaking when it comes to women.
+I was born with one leg shorter than the other one up to a slight limp, and I've suffered from pains in my pelvis. In my childhood I went through surgeries. I was and still am- a shorty. I constantly try to please, and it's peaking when it comes to women.
 
 In fact, when it comes to women I kinda dig the word woman.
 
@@ -10077,8 +10077,14 @@ The CDs store is at the first floor of [[Gesund-Heights]]. It belongs to [[Shalo
  &lt;&lt;heblink [[חנות דיסקים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200225184705256" modified="20200225184807868" tags="[[Coen sister]]" title="Chan">
+<div created="20200225184705256" modified="20200531074705151" tags="[[Coen sister]]" title="Chan">
 <pre>[img[pictures/chan.jpg]]
+
+
+!!![[Gura]]:
+
+Chan has the character of an agriculturist. He wakes up early, he's in charge of the [[Chinese's|The Chinese]] little truck, he's strong, hardworking, disciplined, nice and super funny. 
+
 
 
  &lt;&lt;heblink [[צ'ן]]&gt;&gt;
@@ -10564,13 +10570,13 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[דבקה]]&gt;&gt;</pre>
 </div>
-<div created="20200226063122808" modified="20200523160013361" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]] Windows" title="Dalya`s room">
+<div created="20200226063122808" modified="20200527122741091" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]] Windows" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
 
 !!![[Tomer]]:
 
-This is Dalya's room, my wonderful [[Alexander|Alexander Technique]] teacher, I come to her place every week for a lesson. We enter the room, only after we sit and talk by the dining table, located between the kitchen and the living room with the wide windows facing them a line of cypress trees. An island of silence in the middle of everything. Later on the chair, while Dalya directs me and speaks to me, I stop, breathe, dissemble and reconnect, initiate the gaze when a white dove lands on the window in front of me. &quot;Have you seen that?&quot; she asks me. &quot;Yes&quot;, I answer, and again I'm a little different, full of [[a new sound|https://www.youtube.com/watch?v=oDBl0aqrl6Q]].
+This is Dalya's room, my wonderful [[Alexander|Alexander Technique]] teacher, I come to her place every week for a lesson. We enter the room, only after we sit and talk by the dining table, located between the kitchen and the living room with the wide windows facing them a line of cypress trees. An island of silence in the middle of everything. Later on the chair, while Dalya directs me and speaks to me, I stop, breathe, dissemble and reconnect, initiate the gaze when a white dove lands on the window in front of me. &quot;Have you seen that?&quot; she asks me. &quot;Yes&quot;, I answer, and again I'm a little different, full with [[a new melody|https://www.youtube.com/watch?v=oDBl0aqrl6Q]].
 
 
 
@@ -10697,10 +10703,25 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
-<div created="20200219194330639" modified="20200324170107355" tags="[[Outer sisters]] Films [[The Sopranos]] Music [[Hunky Dory]]" title="David Chase">
+<div created="20200219194330639" modified="20200531081840665" tags="[[Outer sisters]] Films [[The Sopranos]] Music [[Hunky Dory]]" title="David Chase">
 <pre>[img[pictures/david-chase.jpg]]
 
 
+!!![[Yoyo]]:
+
+On [[James Gandolfini's|James Gandolfini]] [[funeral|https://www.usatoday.com/story/life/tv/2013/06/27/james-gandolfini-funeral-sopranos-star/2463931/]], David chase said that even though he was 16 years older than him:
+
+//I always felt we were brothers. We had different tastes, but there were things we both love: family, work, people in all their imperfection, food, alcohol, talking, rage and a desire to bring the whole structure crashing down.
+ //
+
+
+And yes, thanks to [[Angelic]], we all caught, few years behind the others, [[the Sopranos|The Sopranos]] fever. Every other day [[Gura]] tries to draw his face again (like she tries to draw more faces again). She still doesn't really succeed but: &quot;at least it shows how kind hearted he is and smart and an inner smiler. It shows his developed smile muscles&quot; she says.
+
+Only recently I've realized that [[David Chase|https://www.imdb.com/name/nm0153740/]], who made the Sopranos, is the same David Chase of [[Northern Exposure]]. I've always felt home at [[Cicely, Alaska|https://northernexposure.fandom.com/wiki/Cicely,_Alaska]].
+
+ In the Sopranos, my heart went out for him, and I love him like a sister.
+
+I recommend a fascinating [[interview|https://www.youtube.com/watch?v=_7jgaAfWS64]] in my opinion, where [[Peter Bogdanovich|https://www.imdb.com/name/nm0000953/]], the shrink of [[Tony Soprano's shrink|https://www.imdb.com/title/tt0141842/characters/nm0000966?ref_=tt_cl_t2]], is the interviewer. 
 
 
 
@@ -11067,13 +11088,13 @@ The best [[movie|https://en.wikipedia.org/wiki/Cinematography]] I’ve seen late
 
  &lt;&lt;heblink [[קודם כל כרישה ומנגולד]]&gt;&gt;</pre>
 </div>
-<div created="20200308104302002" modified="20200324191618511" tags="[[True stories]]" title="Flip-flopping">
+<div created="20200308104302002" modified="20200527140938849" tags="[[True stories]]" title="Flip-flopping">
 <pre>[img[pictures/tahapochet.jpg]]
 
 
 !!![[Yoyo]]:
 
-In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure she had matters with [[Alfred]]. This turned out not to be true only after I cooled down the potential for enthusiasm about her. During the period that she was caught up with [[The Sopranos]] she affected us all, and we watched the final episode together. This is how time was passing until two days before the meal she came with me to the market and in the garden on the way there I felt that the time was right. Like a knight, I lifted her up to me, looked at her, saw her smiling gaze and kissed her at length and she is my sweetheart. 
+At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure she had a thing with [[Alfred]]. This turned out to be false only after I calmed the potential enthusiasm towards her. During the period she was caught up with [[The Sopranos]] she affected us all, and we watched the final episode together. This is how time passed until two days before the dinner she came with me to the market and in the garden on the way there I felt that the time was right. Like a knight, I lifted her, looked at her, saw her smiling gaze and kissed her for a long time and she is my sweetheart. 
 
 
  &lt;&lt;heblink [[תהפוכת]]&gt;&gt;
@@ -11689,7 +11710,7 @@ I love this phrase [[hunky dory|https://www.merriam-webster.com/dictionary/hunky
 
 </pre>
 </div>
-<div created="20200213211047243" modified="20200215110006803" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
+<div created="20200213211047243" modified="20200527122702984" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>[img[pictures/histeriyot.jpg]]
 
 !!![[Iry and Gura]]:
@@ -11700,7 +11721,7 @@ We imagine the face of [[Hippocrates|https://en.wikipedia.org/wiki/Hippocrates]]
 
 Apparently, we are not just hysterical, for wombs located in our stomachs.  
 
-Yes you- killing machines, exterminating and cancelling all that's not in your favor when comes to sight - [[we'll tell you over and over and over|The global village]] - no more!
+Yes you- killing machines, exterminating and dismissing all that's not in your favor when comes to sight - [[we'll tell you over and over and over|The global village]] - no more!
 
 
  &lt;&lt;heblink [[היסטריות]]&gt;&gt;</pre>
@@ -11740,8 +11761,30 @@ Once and for all I would like to apologize in the name of all apologies for my i
  &lt;&lt;heblink [[אני רוצה להתנצל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212175008520" modified="20200212181018890" tags="[[True stories]] Children" title="I, the psychiatrist">
+<div created="20200212175008520" modified="20200531075743114" tags="[[True stories]] Children" title="I, the psychiatrist">
 <pre>[img[pictures/eytan-sheli.jpg]]
+
+
+!!![[Philip]]:
+
+I have two sons, Max and Ethan.
+
+Max is 27, and he's a dream kid. He does his Master's degree in Genetics, recently he broke up with his girlfriend which he met after his mom passed away (he was twenty back then). He's having fun and good times and he loves his dad.
+
+Ethan loves dad less.
+
+He's 25, super talented, he plays, sings, writes, acts and dances wonderfully. He's gay and he's constantly angry with me.
+
+All the time. 
+
+He looks back with anger at the time when things between Rita, my deceased wife, and I were bad.
+
+It happened when he was almost 17. After a while, he found out that Rita has lethal cancer, and six months later she passed away.
+
+He thinks Rita got sick because of me. I don't know how he spends his spare time. I finance him. He lives downtown, and even though he really likes Eva, it's very difficult for me to bring him by, and I worry about him. 
+
+
+
 
 
  &lt;&lt;heblink [[אני הפסיכיאטר]]&gt;&gt;
@@ -12017,8 +12060,18 @@ If you say [[John Goodman|https://www.imdb.com/name/nm0000422/]], even when I'm 
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200225183131810" modified="20200225183352679" tags="[[Coen sister]]" title="Jong">
+<div created="20200225183131810" modified="20200531075023366" tags="[[Coen sister]]" title="Jong">
 <pre>[img[pictures/jong.jpg]]
+
+!!![[Gura]]:
+
+&quot;I'll get there by the metro&quot; is the reply to every setting with Jong.
+ 
+He's an individual being, he's a heavy smoker, he smiles a lot. He's good at fixing. at the end of each project he passes by and checks if everything is joined and screwed together as it should be, same goes for painting.
+
+He has sister who is five years younger, her name is [[Ya]] and she's a sister.
+
+On his behalf, even on the metro he's alone.
 
 
 
@@ -13198,9 +13251,13 @@ It seemed like, everything is fine''
 
 </pre>
 </div>
-<div created="20200308100616070" modified="20200308100810661" tags="[[Iry and Gura]]" title="Opinionated">
+<div created="20200308100616070" modified="20200531080315283" tags="[[Iry and Gura]]" title="Opinionated">
 <pre>[img[pictures/daataniyot.jpg]]
 
+
+!!![[Iry and Gura]]:
+
+One of the problems with us women, and there are many, is, we sometimes happen to be opinionated. 
 
 
 
@@ -14514,8 +14571,23 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200215202733497" modified="20200215202908848" tags="[[Coen sister]]" title="The Chinese">
+<div created="20200215202733497" modified="20200531074520877" tags="[[Coen sister]]" title="The Chinese">
 <pre>[img[pictures/hasinim.jpg]]
+
+
+!!![[Gura]]:
+
+[[Queng]], [[Jong]], [[Fa]], [[Cheng]] and [[Chan]]
+.
+Five men in the early thirties of their lives. The five of them were born to immigrant families who reached Paris as a group in their early twenties from [[Hangzhou|https://en.wikipedia.org/wiki/Hangzhou]].
+
+They (all five) grew up together in the 17th quarter, went through kindergarten to high school together, celebrated all the holidays together including the [[last Christmas|Christmas dinner]]. 
+
+They were taught the construction craft by their ancestors, and that's how they became, an absolute handyman squad, who got to know us through [[Genevieve]], which through her we got to know [[the apartment|Wishing star 01]].
+
+Queng was the first I got attached to, he was the one walking around with me in the apartment's renovating purchasing area, but all of them are one by one. 
+
+
 
  &lt;&lt;heblink [[הסינים]]&gt;&gt;
 
@@ -14620,15 +14692,19 @@ I've come to the conclusion that I need to be ready for the nice enlightened veh
 
 </pre>
 </div>
-<div created="20200202171450477" modified="20200422204300101" tags="[[Monkeys with car keys]]" title="The first assembly">
+<div created="20200202171450477" modified="20200527111017704" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[Philip]]:
 
-Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
+Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such. 
+
 A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
+
 Yoyo stood in front of everybody, and in his wobbly way he asked [[Fa]] to stand close to him and told us how few days ago he insulted Fa, who didn't understand completely the intentions of Yoyo, when they edited the first chapter of his internet porn series.  
+
 &quot;It happened five days ago, that [[I hurt|Keep on bleeding]] Fa, and I couldn't let it go since. I'm really ashamed because I yelled at him and I was not very nice. On the other hand I'm just a human being, and in the end of the day I've called you here to tell you that all of us are in pain and all of us cause pain, and except for the cool things here in the archive, I think that if we really want to make a difference, we have to tell [[the real stories|True stories]] as they are, and there's nothing to be ashamed of, not even of Gura's rage seizures, and I ask you to write – not in an emotional way- but in an [[imagine|Imagine]] way.
+
 When he said it I thought about my Ethan, my youngest son, and how complicated are the relations between us, I, the psychiatrist, am [[walking barefoot|I, the psychiatrist]]. 
 
 
@@ -15882,8 +15958,15 @@ In [[my name|Wyclef Jean]] and in [[Wyclef Jean's name|https://www.youtube.com/w
 
 </pre>
 </div>
-<div created="20200226070625435" modified="20200226070736675" tags="[[Here in the Ghetto]] Mothers" title="Women`s protest">
+<div created="20200226070625435" modified="20200531080201570" tags="[[Here in the Ghetto]] Mothers" title="Women`s protest">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
+
+
+
+!!![[Tomer]]:
+
+After we saw [[Jazz]] singing at the protest events at Rothschild, the night came. I wrapped [[little Nano|Nano and I]] real nice, and we went to Rabin Square, where the pressing protest of the women (those [[who notice|Hysterical]] every detail) took place. They organized a lovely exemplary protest.
+
 
 
  &lt;&lt;heblink [[מחאת הנשים]]&gt;&gt;
@@ -15904,8 +15987,20 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 
 </pre>
 </div>
-<div created="20200225183706640" modified="20200225183805172" tags="[[Coen sister]]" title="Ya">
+<div created="20200225183706640" modified="20200531075251071" tags="[[Coen sister]]" title="Ya">
 <pre>[img[pictures/ya.jpg]]
+
+
+!!![[Gura]]:
+
+Ya is the sister of [[Queng]], she is graceful, as the meaning of her name suggests.
+
+&quot;He's not an Asperger&quot; she always says about her brother &quot;he's just focused on his inner world&quot;.
+
+She does her Master's degree in life science but combined with mind science, and she works at the university's library, and also as a UTA in the lab.
+
+We became really close, and she's a sister.
+
 
 
  &lt;&lt;heblink [[יה]]&gt;&gt;</pre>
