--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@ Error message and password prompt
 
 <li>$:/state/folded/המעבדה</li>
 
+<li>$:/state/folded/הקיוסק של גילי</li>
+
 <li>$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק</li>
+
+<li>$:/state/folded/מערכת תל אביב</li>
 
 <li>$:/state/folded/סיפורים מהעתיד</li>
 
@@ -9196,7 +9200,13 @@ Error message and password prompt
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
 <pre>show</pre>
 </div>
+<div created="20200531135138151" modified="20200531135138369" title="$:/state/folded/הקיוסק של גילי">
+<pre>show</pre>
+</div>
 <div created="20180511193133078" modified="20180511193137282" title="$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק">
+<pre>show</pre>
+</div>
+<div created="20200531135144906" modified="20200531135156244" title="$:/state/folded/מערכת תל אביב">
 <pre>show</pre>
 </div>
 <div created="20200521100025033" modified="20200521100029064" title="$:/state/folded/סיפורים מהעתיד">
@@ -9232,10 +9242,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200513145844336" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200513151253896" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200601071047510" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9244,7 +9254,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[החדר של דליה]] [[מגדל בבל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דליקטסן אצל ז'נבייב]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9264,7 +9274,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200523165326588" title="$:/temp/search">
+<div created="20161023184814872" modified="20200601071413939" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11078,7 +11088,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200502113847305" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200601071050458" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -13136,7 +13146,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The Wire]]&gt;&gt;
 </pre>
 </div>
-<div created="20170705183317472" modified="20200217195217014" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הספלים מהם אנו שותים">
+<div created="20170705183317472" modified="20200531112322827" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הספלים מהם אנו שותים">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13147,7 +13157,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 לפעמים אני מורה ליוגה, למרות שאני לא מתה על טעם של גלזורה. לפעמים איכרה סיבירית שקיבלה סרוויס כחלק מנדוניה, ולפעמים אני גבר ספרדי עם שפם.
 
-&lt;&lt;englink [[The cups we're drinking from ]]&gt;&gt;</pre>
+&lt;&lt;englink [[The mugs we drink from]]&gt;&gt;</pre>
 </div>
 <div created="20170318200354245" modified="20170507181909075" tags="HH" title="הספנית">
 <pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
@@ -16284,7 +16294,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Searching for Iry]]&gt;&gt;</pre>
 </div>
-<div created="20170918165813987" modified="20200324164225535" tags="[[סיפורים אמיתיים]] סרטים סגירים [[האנקי דורי]]" title="מטא בדיון">
+<div created="20170918165813987" modified="20200531144048883" tags="[[סיפורים אמיתיים]] סרטים סגירים [[האנקי דורי]]" title="מטא בדיון">
 <pre>[img[pictures/meta-fiction.jpg]]
 
 !!![[יויו]]:
