--- a/english.html
+++ b/english.html
@@ -351,6 +351,8 @@ Error message and password prompt
 
 <li>Cafe Müller</li>
 
+<li>Cafés</li>
+
 <li>Cannelloni</li>
 
 <li>Caramelized pecan pie</li>
@@ -412,8 +414,6 @@ Error message and password prompt
 <li>Coffee</li>
 
 <li>Coffee and Candies</li>
-
-<li>Coffee shops</li>
 
 <li>Comprehensive or compulsive</li>
 
@@ -1026,6 +1026,8 @@ Error message and password prompt
 <li>Tel Aviv Desk</li>
 
 <li>Tethys ocean</li>
+
+<li>The Altermans - the cover version</li>
 
 <li>The archive's trustees</li>
 
@@ -9118,10 +9120,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200522143855609" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200601074121719" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200605134440437" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9130,7 +9132,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Laundry [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9150,7 +9152,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200601074842687" title="$:/temp/search">
+<div created="20161023184814872" modified="20200605133710492" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9824,7 +9826,7 @@ This morning, while I went out to buy [[bread|Lehamim and corona]], I decided th
  
 </pre>
 </div>
-<div created="20200219150535524" modified="20200219152234931" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] Metafiction Restaurants" title="Beta VeGriga">
+<div created="20200219150535524" modified="20200605133834696" tags="[[Here in the Ghetto]] Coffee Metafiction Restaurants Cafés" title="Beta VeGriga">
 <pre>[img[pictures/beta-ve-grega.jpg]]
 
 !!![[Tomer]]:
@@ -9962,7 +9964,7 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
  &lt;&lt;heblink [[כמולונז]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308122901426" modified="20200502113033442" tags="[[Food addicts]] Restaurants [[Coffee shops]]" title="Bread">
+<div created="20200308122901426" modified="20200605133953807" tags="[[Food addicts]] Restaurants Cafés" title="Bread">
 <pre>[img[pictures/lechem.jpg]]
 
 
@@ -9990,6 +9992,19 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
 
 </pre>
+</div>
+<div created="20200213160902173" modified="20200605134415685" tags="[[Food addicts]] Coffee Metafiction Bread" title="Cafés">
+<pre>[img[pictures/coffee-shops.jpg]]
+
+!!![[The team]]:
+
+When looking online after cafés from somewhere that is not Europe, except for Scandinavia, and not the Far East, but a café in nowhere kind of place, we found [[this thing|https://upload.wikimedia.org/wikipedia/commons/b/b6/Durkee%2C_Oregon%2C_cafe.jpg]], in [[Durkee, Oregon|https://en.wikipedia.org/wiki/Durkee,_Oregon]]. We asked ourselves if visiting there someday would be a good idea, it seems cool. Meanwhile, Gura drew it. Remember and never forget. 
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Cafés]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
 <div created="20200307165602093" modified="20200307165706492" tags="Recipes [[Food addicts]]" title="Cannelloni">
 <pre>[img[pictures/cannelloni.jpg]]
@@ -10445,7 +10460,7 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
-<div created="20200213155644547" modified="20200531104025089" tags="[[Food addicts]] [[Coffee shops]] Coffee [[The kitchen by Genevieve]]" title="Coffee">
+<div created="20200213155644547" modified="20200605133945159" tags="[[Food addicts]] Coffee [[The kitchen by Genevieve]] Cafés" title="Coffee">
 <pre>[img[pictures/coffee.jpg]]
 
 
@@ -10472,19 +10487,6 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
 
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
-</div>
-<div created="20200213160902173" modified="20200601071304807" tags="[[Food addicts]] Coffee Metafiction Bread" title="Coffee shops">
-<pre>[img[pictures/coffee-shops.jpg]]
-
-!!![[The team]]:
-
-When looking online after cafés from somewhere that is not Europe, except for Scandinavia, and not the Far East, but a café in nowhere kind of place, we found [[this thing|https://upload.wikimedia.org/wikipedia/commons/b/b6/Durkee%2C_Oregon%2C_cafe.jpg]], in [[Durkee, Oregon|https://en.wikipedia.org/wiki/Durkee,_Oregon]]. We asked ourselves if visiting there someday would be a good idea, it seems cool. Meanwhile, Gura drew it. Remember and never forget. 
-
-
-
-&lt;&lt;list-links filter:&quot;[tag[Coffee shops]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
 <div created="20200217203006778" modified="20200304124940311" tags="[[Monkeys with car keys]]" title="Comprehensive or compulsive">
 <pre>[img[pictures/spiritual-level.jpg]]
@@ -10745,7 +10747,7 @@ I recommend a fascinating [[interview|https://www.youtube.com/watch?v=_7jgaAfWS6
 
 </pre>
 </div>
-<div created="20200225190656305" modified="20200502112614519" tags="[[Here in the Ghetto]] Restaurants [[Coffee shops]] Kitchens Bread" title="Delicatessen">
+<div created="20200225190656305" modified="20200605134011326" tags="[[Here in the Ghetto]] Restaurants Kitchens Bread Cafés" title="Delicatessen">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
@@ -10753,7 +10755,7 @@ I recommend a fascinating [[interview|https://www.youtube.com/watch?v=_7jgaAfWS6
  &lt;&lt;heblink [[דליקטסן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215113637898" modified="20200601071600054" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]] Bread" title="Delicatessen Chez Genevieve">
+<div created="20200215113637898" modified="20200605134027500" tags="Meals Coffee Restaurants [[The kitchen by Genevieve]] Bread Cafés" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
 
@@ -11305,7 +11307,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 </pre>
 </div>
-<div created="20200226072008566" modified="20200601072912502" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] Bread" title="Gili's kiosk">
+<div created="20200226072008566" modified="20200605134042231" tags="[[Here in the Ghetto]] Coffee Bread Cafés" title="Gili's kiosk">
 <pre>[img[pictures/gili.jpg]]
 
 !!![[Tomer]]:
@@ -11326,7 +11328,7 @@ I know wonderful Gili since the time when there was a branch of [[Reviva and Cel
 
 </pre>
 </div>
-<div created="20200225185730232" modified="20200601070545785" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking Bread" title="Grasyani">
+<div created="20200225185730232" modified="20200605134057488" tags="[[Here in the Ghetto]] Coffee Baking Bread Cafés" title="Grasyani">
 <pre>[img[pictures/grasyani.jpg]]
 
 
@@ -12234,7 +12236,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
 
 </pre>
 </div>
-<div created="20200212164125847" modified="20200601074839421" tags="Metafiction [[Here in the Ghetto]] Families Windows" title="Laundry">
+<div created="20200212164125847" modified="20200605133402622" tags="Metafiction [[Here in the Ghetto]] Families Windows" title="Laundry">
 <pre>[img[pictures/kevisa.jpg]]
 
 
@@ -12286,7 +12288,7 @@ If I go for shopping in the afternoon hours, then it's with [[sweet Nano|Nano an
  &lt;&lt;heblink [[כדורי קטניות ברוטב קוקוס וקארי ירוק]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219162401317" modified="20200502110927334" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens Bread" title="Lehamim">
+<div created="20200219162401317" modified="20200605134150270" tags="[[Here in the Ghetto]] Restaurants Baking [[Food addicts]] Kitchens Bread Cafés" title="Lehamim">
 <pre>[img[pictures/breads.jpg]]
 
 
@@ -12301,7 +12303,7 @@ If I go for shopping in the afternoon hours, then it's with [[sweet Nano|Nano an
 
 </pre>
 </div>
-<div created="20200410161820933" modified="20200502110938148" tags="[[Here in the Ghetto]] [[Corona beings]] Baking [[Coffee shops]] Kitchens Bread" title="Lehamim and corona">
+<div created="20200410161820933" modified="20200605134209492" tags="[[Here in the Ghetto]] [[Corona beings]] Baking Kitchens Bread Cafés" title="Lehamim and corona">
 <pre>[img[pictures/lehamim-bacorona.jpg]]
 
 
@@ -13150,7 +13152,7 @@ When I laid down on [[the mattress in India|Searching for Iry]], I’ve seen eac
 
  &lt;&lt;heblink [[פאי נקטרין]]&gt;&gt;</pre>
 </div>
-<div created="20200215181227245" modified="20200215182344292" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
+<div created="20200215181227245" modified="20200605134223689" tags="[[Here in the Ghetto]] Coffee [[True stories]] Cafés" title="Nehama Vahetzi">
 <pre>[img[pictures/nechama-vahetzi.jpg]]
 
 !!![[Tomer]]:
@@ -13640,7 +13642,7 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
 
  &lt;&lt;heblink [[מתפללים בגינת בילו]]&gt;&gt;</pre>
 </div>
-<div created="20200220153930451" modified="20200531143401898" tags="[[Here in the Ghetto]] Metafiction [[Coffee shops]] [[On the road to somewhere]]" title="Pride here">
+<div created="20200220153930451" modified="20200605134240062" tags="[[Here in the Ghetto]] Metafiction [[On the road to somewhere]] Cafés" title="Pride here">
 <pre>[img[pictures/pride.jpg]]
 
 !!![[Tomer]]:
@@ -14134,7 +14136,7 @@ Out of the really nearby radius, on the other side of the boulevard, on the hill
 
 </pre>
 </div>
-<div created="20200217201929999" modified="20200531110837762" tags="Coffee [[Coffee shops]] [[Here in the Ghetto]]" title="Siach Cafe">
+<div created="20200217201929999" modified="20200605134256340" tags="Coffee [[Here in the Ghetto]] Cafés" title="Siach Cafe">
 <pre>[img[pictures/siach-cafe.jpg]]
 
 !!![[Tomer]]:
@@ -14514,6 +14516,18 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[ים טתיס]]&gt;&gt;
 </pre>
 </div>
+<div created="20200605133217442" modified="20200605133451083" tags="[[Corona beings]] Music [[Outer sisters]] [[Here in the Ghetto]] Families" title="The Altermans - the cover version">
+<pre>
+[img[pictures/altermanz.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[האלתרמנז - גרסת הכיסוי]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
 <pre>[img[pictures/neemaney.jpg]]
 
@@ -14529,7 +14543,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[מספרה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226072300277" modified="20200531121538225" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
+<div created="20200226072300277" modified="20200605134310284" tags="[[Here in the Ghetto]] Coffee Cafés" title="The baristas here">
 <pre>[img[pictures/barista.jpg]]
 
 
@@ -14851,7 +14865,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
  &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
 </div>
-<div created="20200325160957545" modified="20200503075702675" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[Corona beings]] Bread" title="The line for Grasyani">
+<div created="20200325160957545" modified="20200605134326309" tags="[[Here in the Ghetto]] Coffee [[Corona beings]] Bread Cafés" title="The line for Grasyani">
 <pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
@@ -14864,7 +14878,7 @@ Here and now during the Corona times, not more than a hundred meters from home, 
  &lt;&lt;heblink [[התור לגרציאני]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217194809275" modified="20200531112300520" tags="Coffee [[Coffee shops]] Kitchens Houses [[The kitchen by Genevieve]]" title="The mugs we drink from">
+<div created="20200217194809275" modified="20200605134340966" tags="Coffee Kitchens Houses [[The kitchen by Genevieve]] Cafés" title="The mugs we drink from">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[Genevieve]]:
