--- a/index.html
+++ b/index.html
@@ -577,6 +577,8 @@ Error message and password prompt
 
 <li>האחים</li>
 
+<li>האלתרמנז - גרסת הכיסוי</li>
+
 <li>האנטומיה של גריי</li>
 
 <li>האנקי דורי</li>
@@ -9254,7 +9256,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דליקטסן אצל ז'נבייב]]" title="$:/StoryList">
+<div list="[[האלתרמנז - גרסת הכיסוי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9274,7 +9276,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200601071413939" title="$:/temp/search">
+<div created="20161023184814872" modified="20200605134454972" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11088,7 +11090,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200601071050458" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200605133748812" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11101,7 +11103,7 @@ Is where I want to be
 &lt;&lt;list-links filter:&quot;[tag[בתי קפה]]&quot;&gt;&gt;
 
 
-&lt;&lt;englink [[Coffee shops]]&gt;&gt;</pre>
+&lt;&lt;englink [[Cafés]]&gt;&gt;</pre>
 </div>
 <div created="20180704182012305" modified="20200502113905283" tags="מטבחים משפחות לחם" title="בתים">
 <pre>[img[pictures/batim.jpg]]
@@ -12448,6 +12450,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 &lt;&lt;englink [[HaAchim]]&gt;&gt;</pre>
+</div>
+<div created="20200605125004931" modified="20200605133603348" tags="[[הלכות קורונה]] [[כאן בגטו]] [[אחיות חוץ]] מוזיקה" title="האלתרמנז - גרסת הכיסוי">
+<pre>[img[pictures/altermanz.jpg]]
+
+!!![[תומר]]:
+
+בתוך החום הצהוב שאחרי שכחת אבק הכוכבים של ימי הקורונה, אני נח בצהריים על הגב עד שאצטרך לאסוף את ננו, ומעלעל מוכנית באינסטגרם, מתגעגע לאיזו [[גרסת כיסוי|https://www.youtube.com/watch?v=GdAGHNFTH2E&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=5]] משמחת או [[טיק טוק ספונטני|https://www.youtube.com/watch?v=5DM087bjfU4&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=16]] של [[האב האוהב|https://he.wikipedia.org/wiki/%D7%A2%D7%99%D7%93%D7%9F_%D7%90%D7%9C%D7%AA%D7%A8%D7%9E%D7%9F]] [[ושני ילדיו האהובים|https://www.youtube.com/watch?v=UmrsOJCCTNc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=6]], שתרומם נפש [[בשירים ומנגינות|https://www.youtube.com/watch?v=RVCg4xGvNKM&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=7]], [[בתופים ובמחולות|https://www.youtube.com/watch?v=YMRiTxDz2sc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=10]]. 
+
+
+
+
+
+&lt;&lt;englink [[The Altermans - the cover version]]&gt;&gt;</pre>
 </div>
 <div created="20171002200359738" modified="20200220161802487" tags="סדרות אימהות טלוויזיה" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
