--- a/index.html
+++ b/index.html
@@ -12451,12 +12451,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[HaAchim]]&gt;&gt;</pre>
 </div>
-<div created="20200605125004931" modified="20200605133603348" tags="[[הלכות קורונה]] [[כאן בגטו]] [[אחיות חוץ]] מוזיקה" title="האלתרמנז - גרסת הכיסוי">
+<div created="20200605125004931" modified="20200605140031393" tags="[[הלכות קורונה]] [[כאן בגטו]] [[אחיות חוץ]] מוזיקה" title="האלתרמנז - גרסת הכיסוי">
 <pre>[img[pictures/altermanz.jpg]]
 
 !!![[תומר]]:
 
-בתוך החום הצהוב שאחרי שכחת אבק הכוכבים של ימי הקורונה, אני נח בצהריים על הגב עד שאצטרך לאסוף את ננו, ומעלעל מוכנית באינסטגרם, מתגעגע לאיזו [[גרסת כיסוי|https://www.youtube.com/watch?v=GdAGHNFTH2E&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=5]] משמחת או [[טיק טוק ספונטני|https://www.youtube.com/watch?v=5DM087bjfU4&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=16]] של [[האב האוהב|https://he.wikipedia.org/wiki/%D7%A2%D7%99%D7%93%D7%9F_%D7%90%D7%9C%D7%AA%D7%A8%D7%9E%D7%9F]] [[ושני ילדיו האהובים|https://www.youtube.com/watch?v=UmrsOJCCTNc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=6]], שתרומם נפש [[בשירים ומנגינות|https://www.youtube.com/watch?v=RVCg4xGvNKM&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=7]], [[בתופים ובמחולות|https://www.youtube.com/watch?v=YMRiTxDz2sc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=10]]. 
+בתוך החום הצהוב שאחרי שכחת אבק הכוכבים של ימי הקורונה, אני נח בצהריים על הגב עד שאצטרך לאסוף את ננו, ומעלעל מוכנית באינסטגרם, מתגעגע לאיזו [[גרסת כיסוי משמחת|https://www.youtube.com/watch?v=GdAGHNFTH2E&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=5]] או [[טיק טוק ספונטני|https://www.youtube.com/watch?v=5DM087bjfU4&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=16]] של [[האב האוהב|https://he.wikipedia.org/wiki/%D7%A2%D7%99%D7%93%D7%9F_%D7%90%D7%9C%D7%AA%D7%A8%D7%9E%D7%9F]] [[ושני ילדיו האהובים|https://www.youtube.com/watch?v=UmrsOJCCTNc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=6]], שתרומם נפש [[בשירים ומנגינות|https://www.youtube.com/watch?v=RVCg4xGvNKM&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=7]], [[בתופים ובמחולות|https://www.youtube.com/watch?v=YMRiTxDz2sc&amp;list=PLN6LsdjEZU6JR5u7bsYz-QtTXMzZZVHss&amp;index=10]]. 
 
 
 
