--- a/index.html
+++ b/index.html
@@ -12451,7 +12451,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[HaAchim]]&gt;&gt;</pre>
 </div>
-<div created="20200605125004931" modified="20200605140031393" tags="[[הלכות קורונה]] [[כאן בגטו]] [[אחיות חוץ]] מוזיקה" title="האלתרמנז - גרסת הכיסוי">
+<div created="20200605125004931" modified="20200605151058233" tags="[[הלכות קורונה]] [[כאן בגטו]] [[אחיות חוץ]] מוזיקה משפחות" title="האלתרמנז - גרסת הכיסוי">
 <pre>[img[pictures/altermanz.jpg]]
 
 !!![[תומר]]:
